--- a/package.json
+++ b/package.json
@@ -14,5 +14,10 @@
     "node-telegram-bot-api": "^0.30.0",
     "request": "^2.88.0",
     "transliteration": "^2.1.3"
+  },
+  "devDependencies": {
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.17.2"
   }
 }
